create home body from samragi

--- a/src/global.module.css
+++ b/src/global.module.css
@@ -4,4 +4,5 @@
 }
 body {
   background-color: rgba(39, 207, 39, 0.367);
+  background-image: url(https://gallerist.in/cdn/shop/products/lord-buddha-painting-9_3357x.jpg?v=1664435768);
 }
